src/mm-form/mm-form.scss
/**
 * @license
 * Copyright (c) 2015 MediaMath Inc. All rights reserved.
 * This code may only be used under the BSD style license found at http://mediamath.github.io/strand/LICENSE.txt

*/
@import "_bourbon";

:host {
	display: flex;
	flex-wrap: wrap;
	position: relative;
}

:host ::content .col {
	box-sizing: border-box;
}

:host ::content mm-radio label {
	line-height: 29px;
}

:host ::content mm-header[size=medium] {
	margin-bottom: 10px;
}

:host ::content mm-checkbox {
	margin-bottom: 10px;
}

:host ::content mm-checkbox mm-header[size=medium] {
	margin-bottom: 0px;
	line-height: 20px;
}

mm-footer {
	position: fixed;
	bottom: 0;
	right: 0;
}

